# pegasus-psc

./: README.md  cerebras-modelzoo.py  pyproject.toml
executables/: compile.sh  prepare_inputs.sh  train.sh  validate.sh
input/: mnist-test.tfrecord-00000-of-00001
multi-site/: multisite-example.py
multi-site/input/: pre_training_input.txt
psc-workflow/: README.md  main.py
psc-workflow/executables/: run_roberta.sh
psc-workflow/executables/step1/: README.md  create_csv_mlm_only.py  create_csv_mlm_only_test.sh  create_csv_mlm_only_train.sh  create_csv_mlm_only_val.sh  prepare_tokenization_split.py  prepare_tokenization_split.sh  run_pretrain_split.sh  run_roberta.py  run_roberta.sh
psc-workflow/executables/step2/: README.md  create_regression_csv.sh  run_regression.sh
psc-workflow/executables/step3/: README.md  run_inference.py  run_inference.sh  (+1 more)
psc-workflow/step0/: create_regression_csv_new.py  run_regression_data.sh
psc-workflow/step1/: README.md  create_csv_mlm_only.py  prepare_tokenization.py  prepare_tokenization_split.py  roberta_params.yaml  run_pretrain.sh  run_pretrain_split.sh  run_roberta.py
psc-workflow/step2/: README.md  create_regression_csv.py  regression_params.yaml  run_regression.py  run_regression.sh  run_regression_data.sh
psc-workflow/step3/: README.md  run_inference.py  run_inference.sh  run_regression_eval.sh
pt/: README.md  cerebras-modelzoo-pt.py  notebook.ipynb
pt/executables/: compile.sh  prepare_inputs.sh  prepare_inputs.sh~  train.sh  validate.sh
tf/: README.md  cerebras-modelzoo.py
tf/executables/: train.sh
(+5 files in other folders)
